@@ -1,6 +1,7 @@
 isso (0.12.1-1) UNRELEASED; urgency=medium
 
   * New upstream release.
+  * Add gitlab-ci configuration.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 19 Jan 2019 17:43:17 +0000
 
